ASSIGNED - # 140: Implement new UI based on the HTML prototype https://www.andreasbehnke.com/mantis/view.php?id=140
implemented news reading view

--- a/cee-news-webreader/src/main/resources/com/cee/news/client/ui/Styles.css
+++ b/cee-news-webreader/src/main/resources/com/cee/news/client/ui/Styles.css
@@ -2,6 +2,7 @@
 @def articleTeaserColumns 3;
 @def articleTeaserHeight 120px;
 @def articleTeaserTop 96px;
+@def relatedArticleColumns 1;
 /*** reset ***/
 BODY {
 	margin: 0px;
