ASSIGNED - # 220: Heise.de article is missing paragraphs https://www.andreasbehnke.com/mantis/view.php?id=220 ASSIGNED - # 219: Article's title of tageschau.de not skipped https://www.andreasbehnke.com/mantis/view.php?id=219 ASSIGNED - # 217: Boiler text from spiegel.de extracted https://www.andreasbehnke.com/mantis/view.php?id=217 ASSIGNED - # 218: Article from faz.net not extracted https://www.andreasbehnke.com/mantis/view.php?id=218

--- a/cee-news-webreader/src/main/resources/com/cee/news/client/ui/Styles.css
+++ b/cee-news-webreader/src/main/resources/com/cee/news/client/ui/Styles.css
@@ -68,6 +68,11 @@ FIELDSET LI {
 	margin-bottom: 4px;
 }
 
+.content P {
+	margin-top: 8px;
+	max-width: 640px;
+}
+
 /* teaser */
 .teaser {
 	overflow: hidden;
